--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-title: Jekyll Serial Programmer
+title: Juri Yoneyama
 markdown: kramdown
 
 # for atom feed
 author:
-  name: Sharad Raj Singh Maurya
-  email: dev_sharad@outlook.com
+  name: Juri Yoneyama （米山樹里）
+  email: julie.ynym@gmail.com
 
 plugins:
   - jemoji
