--- a/_data/author.yml
+++ b/_data/author.yml
@@ -13,4 +13,4 @@ contact:
   - title: dev
     url: https://juri-ynym.github.io
   - title: email
-    url: href:julie.ynym@gmail.com
+    url: mailto:julie.ynym@gmail.com
