--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,5 +1,5 @@
 name: Juri
-dp: ../../assets/images/favicon.png
+dp: assets/images/IMG_9004.jpg
 description: "
 ユーザーの観察・分析、仮説検証が得意なUXリサーチャーです。WebサイトディレクションやUIデザインなども幅広く対応可能です。IT業界で4年間勤務した後、2022年に大学院に入学。人とコンピュータの関わりを研究するHuman-Computer Interaction分野においてAR（拡張現実）の研究を行い、工学修士を取得。修士では、ARアバタを用いた対面会話時の社交不安軽減手法を研究。2024年よりARのUXを研究すべく、フランスで博士課程に進学予定。
 "
@@ -8,12 +8,8 @@ description: "
 email: dev_sharad@outlook.com
 contact:
   - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
-  - title: github
-    url: https://github.com/sharadcodes
-  - title: twitter
-    url: https://twitter.com/iamsharadraj
-  - title: dev
-    url: https://dev.to/sharadcodes
+    url: https://www.linkedin.com/in/juriyamamoto
+  - title: scholar
+    url: https://juri-ynym.github.io/
   - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: mailto:julie.ynym@gmail.com
